# qr_reader

./: CMakeLists.txt  notes  package.xml
config/: test.rviz
include/qr_reader/: qr_reader.hpp  qrcode_image.hpp  qrcode_pcl.hpp
launch/: qr_reader_launch.py  qr_reader_launch2.py  qr_reader_node_launch.py
params/: params.yaml
src/: qr_reader_main.cpp  qrcode_image_main.cpp  qrcode_pcl_main.cpp
src/qr_reader/: qr_reader.cpp  qrcode_image.cpp  qrcode_pcl.cpp
